# rust-learn

./: .gitignore  README.md
src/ch02/guessing_game/: Cargo.toml
src/ch02/guessing_game/src/: main.rs
src/ch03/branches/src/: main.rs
src/ch03/data-types/src/: main.rs
src/ch03/function/src/: main.rs
src/ch03/variables/src/: main.rs
src/ch04/ownership/src/: main.rs
src/ch04/references_and_borrowing/src/: main.rs
src/ch04/slices/src/: main.rs
src/ch05/defining-structs/src/: main.rs
src/ch05/example-structs/: Cargo.toml
src/ch05/example-structs/src/: main.rs
src/ch05/method-syntax/src/: main.rs
src/ch06/define-enum/: Cargo.toml
src/ch06/define-enum/src/: main.rs
src/ch06/if-let/src/: main.rs
src/ch06/match-learn/: Cargo.toml
src/ch06/match-learn/src/: main.rs
src/ch07/backyard/src/: main.rs
src/ch07/restaurant/src/: front_of_house.rs  lib.rs  main.rs
src/ch08/collections/src/: main.rs
src/ch09/error/: Cargo.toml
src/ch09/error/src/: main.rs
src/ch10/generics/src/: main.rs
src/ch10/lifetime-syntax/: Cargo.toml
src/ch10/lifetime-syntax/src/: main.rs
src/ch10/trait-learn/: Cargo.toml
src/ch10/trait-learn/src/: lib.rs  main.rs
